# hfx-tools

./: .gitignore  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
example/data/: HEGL_AFA.csv
example/metadata/: HEGL_AFA.hfx-metadata.json
hfx_tools/: build.py  cli.py  git.py  inspect.py  io.py  pack.py  qc.py  streamlit_app.py  submit.py  util.py  validators.py
